--- a/CWayvManual/CWayvManual.tex
+++ b/CWayvManual/CWayvManual.tex
@@ -90,8 +90,8 @@
 
 \input{01-introduction.tex}
 
-%\part{Language Reference}
-%\input{02-types.tex}
+\part{Language Reference}
+\input{02-types.tex}
 %\input{03-type-system.tex}
 %\input{04-class-field.tex}
 %\input{05-expressions.tex}
